--- a/static/styles/headMenuStyle.css
+++ b/static/styles/headMenuStyle.css
@@ -13,26 +13,24 @@ body {
 }
 
 
-
-.headLogo {
-    margin-left: 1%;
-    
-}
-
 .logoImage {
-        width: 200px;
-        height: 70px;
+        width: 160px;
+        height: 60px;
     }
 
 .miniPhoto {
-    width: 60px;
-    height: 60px;
-    margin-right: 20px;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
     border-radius: 100px;
 }
 
 .headLinks {
     position: fixed;
     float: right;
-    margin-right: 1%;
+}
+
+.arrowImage {
+    width: 20px;
+    height: 10px;
 }
