--- a/static/styles/indexStyle.css
+++ b/static/styles/indexStyle.css
@@ -3,17 +3,19 @@
     text-align: center;
 }
 
-.mainLogo {
+.indexMainLogo {
     width: 300px;
     height: 110px;
-    padding-top: 60px;
+    margin-top: 60px;
 }
 
 body {
     min-width: 930px;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
-.content {
+.indexContent {
     background-image: url(../content/images/background.png);
     padding-bottom: 70px;
 }
