--- a/app/user/edit-user.component.html
+++ b/app/user/edit-user.component.html
@@ -51,11 +51,13 @@
         </div>
         <div class="socialUl">
             <ul>
-                <p><input type="checkbox" id="Fb"/>
-                    <label for="Fb"><img src="content/images/fb_logo.png" class="ulImage">Facebook</label> <a href="#"
-                                                                                                              class="ulLink">Manage
+                <p><input [checked]="isFBConnected" type="checkbox" id="Fb"/>
+                    <label for="Fb"><img src="content/images/fb_logo.png" class="ulImage">Facebook</label>
+                    <a href="https://www.facebook.com/dialog/oauth?client_id=141340716272867&redirect_uri=http://ufeed.azurewebsites.net/api/social/fbauth&scope=user_likes,user_posts,user_managed_groups"
+                       target="_blank"
+                       class="ulLink">Manage
                         network</a></p>
-
+                <input type="text" placeholder="token"> <input type="button" (click)="activateFB()" value="Authorize">
                 <p><input type="checkbox" id="Vk"/>
                     <label for="Vk"><img src="content/images/vk_logo.png" class="ulImage">Vkontakte</label> <a href="#"
                                                                                                                class="ulLink">Manage
