--- a/styles/indexMenuStyle.css
+++ b/styles/indexMenuStyle.css
@@ -1,9 +1,10 @@
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1300px)
+{
     .logoImage {
         width: 160px;
         height: 60px;
     }
-
+    
     .headlink {
         width: 100px;
         margin-left: 30%;
@@ -11,12 +12,14 @@
     }
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px)
+{
     .logoImage {
         width: 150px;
         height: 55px;
     }
-
+    
+    
     .headlink {
         width: 100px;
         margin-left: 15%;
@@ -29,13 +32,14 @@
     width: 45%;
 }
 
+
 .headMenu {
     margin-top: 1%;
-    white-space: nowrap;
+    white-space:nowrap;
 }
 
 .headMenu div {
     vertical-align: middle;
-    display: inline-block;
+    display:inline-block;
 }
 
