added category removal functionality

--- a/app/category/concrete-category.component.html
+++ b/app/category/concrete-category.component.html
@@ -20,8 +20,12 @@
                             </p>
                         </li>
                     </ul>
+                    <div style="padding: 0 10px 10px 0" class="right-align">
+                        <a (click)="deleteCategory(category.Id)">Delete category</a>
+                    </div>
                 </div>
             </li>
+
         </ul>
     </div>
     <div class="addCategory">
