--- a/app/user/edit-user.component.html
+++ b/app/user/edit-user.component.html
@@ -70,8 +70,8 @@
                                                                                      (click)="activateFB()"
                                                                                      value="Authorize">
                 <p><input [checked]="isVKConnected" type="checkbox" id="Vk"/>
-                    <label for="Vk"><img src="content/images/vk_logo.png" class="ulImage">Facebook</label>
-                    <a href="https://oauth.vk.com/authorize?client_id=5494787&display=popup&redirect_uri=http://ufeed.azurewebsites.net/api/social/vkauth&scope=groups,audio&response_type=code&v=5.52"
+                    <label for="Vk"><img src="content/images/vk_logo.png" class="ulImage">VK</label>
+                    <a href="https://oauth.vk.com/authorize?client_id=5494787&display=popup&redirect_uri=http://ufeed.azurewebsites.net/api/social/vkauth&scope=groups,audio,wall&response_type=code&v=5.52"
                        target="_blank"
                        class="ulLink">Manage
                         network</a>
